# tauri-plugin-printer

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
dist-js/: constants.d.ts  index.cjs  index.d.ts  index.js  types.d.ts
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.tsx
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: main.rs
guest-js/: constants.ts  index.ts
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: api.rs  commands.rs  declare.rs  fsys.rs  lib.rs  models.rs  windows.rs
webview-dist/: constants.d.ts  constants.js  index-DdjwHJFE.js  index-Ez4jf7lg.js  index-mGbQRgIb.js  index-tFC8yJHj.js  index-tZt8eDlY.js  index-zFGCVuYA.js  index.d.ts  index.es-6EIX0sCT.js  index.es-7FbkSa-7.js  index.es-Xl3axL9q.js  index.es-_HviKyh9.js  index.es-ivI5mcpQ.js  index.es-lj0KdKiE.js  index.js  types.d.ts  utils.d.ts  utils.js
webview-src/: constants.ts  index.ts  tsconfig.json  types.ts  utils.ts
