[package]
name = "tauri-plugin-printer"
version = "4.1.0"
authors = [ "47vigen" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-printer"

[dependencies]
tauri = { version = "2.0.0-beta" }
serde = "1.0"
thiserror = "1.0"
base64 = "0.22.1"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.1", features = ["build"] }
